# FillDCM

./: .gitignore  .pre-commit-config.yaml  Readme.md  fill_dcm.py  filldcm.py  filldcm.spec  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
fill_dcm/: fill_dcm.py  parse_argument.py  vr_generators.py
filldcm/: fill_dcm.py  parse_argument.py  vr_generators.py
test/: test_adjust_dicom_dataset.py  test_fill_dcm.py  test_generates_data.py  test_parse_argument.py  test_update_data.py  test_vr_generators.py
test/data/: dcm_dataset_all_defined.json  dcm_dataset_all_empty.json  dcm_dataset_no_birthdate.json  dcm_dataset_no_name.json  dcm_dataset_no_patient_id.json  dcm_dataset_no_referring_physician.json  dcm_dataset_no_sex.json  dcm_dataset_with_patientname.json  dcm_json.json
