[tool.poetry]
name = "filldcm"
version = "0.1.0"
description = "Ajust DCM files"
authors = ["Sylvain Jeanne <jeanne.sylvain.dev@gmail.com>"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.11"
pydicom = "^2.4.4"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
