[tool.poetry]
name = "filldcm"
version = "0.1.0"
description = "Ajust DCM files"
authors = ["Sylvain Jeanne <jeanne.sylvain.dev@gmail.com>"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pydicom = "3.0.*"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"
poethepoet = "^0.32.1"

[tool.poetry.group.installer.dependencies]
pyinstaller = "^6.11.1"

[tool.poe.tasks]
test = "python -m unittest"
installer = "python -m pyinstall filldcm.py --onefile"

[tool.black]
line-length = 150
target-version = ['py310']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
